# Ubotosos

./: .gitignore  README.md  pyproject.toml
tests/: test_ubotosos.py
ubotosos/: main.py  usos.py
